--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,40 @@
 plugins {
     id 'java-library'
+    id 'io.qameta.allure' version '2.11.2'
 }
 
 repositories {
     mavenCentral()
 }
 
+allure {
+    report {
+        version.set("2.19.0")
+    }
+    adapter {
+        allureJavaVersion.set("2.19.0")
+        aspectjVersion.set("1.9.5")
+        autoconfigure.set(true)
+        autoconfigureListeners.set(true)
+        aspectjWeaver.set(true)
+
+        frameworks {
+            junit5 {
+                adapterVersion.set("2.19.0")
+                enabled.set(true)
+                autoconfigureListeners.set(true)
+            }
+        }
+    }
+}
+
 dependencies {
-    testImplementation (
-            "com.codeborne:selenide:6.16.1",
-            "org.junit.jupiter:junit-jupiter:5.10.0",
-            "org.slf4j:slf4j-simple:2.0.7",
-            "com.github.javafaker:javafaker:1.0.2"
+    testImplementation(
+            'com.codeborne:selenide:6.16.1',
+            'org.junit.jupiter:junit-jupiter:5.10.0',
+            'org.slf4j:slf4j-simple:2.0.7',
+            'com.github.javafaker:javafaker:1.0.2',
+            'io.qameta.allure:allure-selenide:2.23.0'
     )
 }
 
