--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,4 +1,4 @@
-name: Allure reports
+name: Test
 
 on: workflow_dispatch
 
@@ -10,7 +10,7 @@ jobs:
       - uses: actions/setup-java@v3
         with:
           distribution: 'zulu'
-          java-version: '20'
+          java-version: '11'
       - uses: Xotabu4/selenoid-github-action@v2
       - run: ./gradlew clean test -Dselenide.remote=http://localhost:4444/wd/hub
       - uses: actions/checkout@v2
