--- a/build.gradle
+++ b/build.gradle
@@ -47,3 +47,5 @@ test {
     useJUnitPlatform()
     systemProperties(System.getProperties())
 }
+sourceCompatibility = JavaVersion.VERSION_16
+targetCompatibility = JavaVersion.VERSION_16
